<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    tools:context=".LoginActivity">

    <TextView
        style="@style/main_title"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TASK MANAGER"
        app:layout_constraintTop_toTopOf="parent"
        />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@android:color/white"
        app:cardCornerRadius="10dp">
        <!--app:cardBackgroundColor="@android:color/transparent">-->


    <LinearLayout
        android:background="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            style="@style/sub_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_title" />

        <TextView
            style="@style/subMin_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_username" />

        <EditText
            android:id="@+id/LoginUsername"
            style="@style/edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Type your username"
            android:inputType="text" />

        <TextView
            style="@style/subMin_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_password" />

        <EditText
            android:id="@+id/LoginPassword"
            style="@style/edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Type your password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btnLogin"
            style="@style/primaryButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_title" />

        <TextView
            android:id="@+id/lblRegister"
            style="@style/label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="don't you have an account? Register Her" />
    </LinearLayout>
</androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>